# softleg

./: README.md
softleg/: CMakeLists.txt  package.xml
softleg_description/: CMakeLists.txt  package.xml
softleg_description/configs/rviz/: leg_controllers.yaml  standalone.rviz
softleg_description/launch/: load.launch  standalone.launch
softleg_description/model/: softleg_cart.urdf.xacro  softleg_inertia.xacro
softleg_description/robot/: softleg_cart.urdf.xacro
softleg_description/urdf/: softleg_cart.urdf
