<?xml version="1.0"?>
<package format="2">
  <name>softleg</name>
  <version>1.0.0</version>
  <description>The softleg package</description>

  <author email="mathewjose.pollayil@phd.unipi.it">Mathew Jose Pollayil</author>
  <maintainer email="georgejose.pollayil@phd.unipi.it">George Jose Pollayil</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>softleg_description</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
